--- a/css/style.css
+++ b/css/style.css
@@ -1,11 +1,11 @@
 @import 'https://fonts.googleapis.com/css?family=Viga';
 .logo {
+  font-family: 'Lobster';
   font-weight: 200;
-  font-size: 2.4rem;
-  letter-spacing: .2rem;
+  font-size: 3rem;
+  letter-spacing: .6rem;
   padding-left: 8px;
-  color: rgba(0, 0, 0, 0.8);
-  -webkit-box-reflect: below -26px -webkit-gradient(linear, 0 0, 0 100%, from(transparent), color-stop(0.4, transparent), to(rgba(0,0,0,0.8)));
+  color: #333;
 }
 
 .pmenu .brand-box {
@@ -16,9 +16,9 @@
 }
 
 .pmenu .brand-box p {
-  font-family: 'Viga', sans-serif;
-  font-size: 1.5rem;
-  letter-spacing: 0.75rem;
+  font-family: 'Lobster', sans-serif;
+  font-size: 2rem;
+  letter-spacing: 0.4rem;
   padding-left: 1.2px;
   color: #e1e1e1;
   margin: 0;
