--- a/css/qwerty.css
+++ b/css/qwerty.css
@@ -222,6 +222,9 @@ a:hover {
   border-bottom: solid 1px rgba(55, 55, 55, 0.2);
   border-right: solid 1px rgba(55, 55, 55, 0.2);
   color: #333;
+  font-size: 1.4rem;
+  letter-spacing: .28rem;
+  padding: 1rem 2rem .8rem 2rem;
 }
 
 .btn:hover, .btn:focus, .btn:active{
