--- a/css/qwerty.css
+++ b/css/qwerty.css
@@ -80,10 +80,6 @@
   .eleven.cols                 { width: 91.58333333333337%; }
   .twelve.cols                 { width: 100%; margin-left: 0; }
 
-  .one-third               { width: 33.33333333333333%; }
-  .two-thirds              { width: 66.66666666666666% }
-  .one-half                { width: 50%; }
-
   .one-third.col,
   .one-third.cols               { width: 32.66666666666667%; }
   .two-thirds.col,
@@ -125,6 +121,10 @@
 
 }
 
+.one-fourth              { width: 25%; }
+.one-third               { width: 33.33333333333333%; }
+.two-thirds              { width: 66.66666666666666% }
+.one-half                { width: 50%; }
 
 /* Base Styles
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
@@ -222,6 +222,9 @@ a:hover {
   border-bottom: solid 1px rgba(55, 55, 55, 0.2);
   border-right: solid 1px rgba(55, 55, 55, 0.2);
   color: #333;
+  font-size: 1.4rem;
+  letter-spacing: .28rem;
+  padding: 1rem 2rem .8rem 2rem;
 }
 
 .btn:hover, .btn:focus, .btn:active{
