--- a/css/qwerty.css
+++ b/css/qwerty.css
@@ -1086,12 +1086,26 @@ nav ul{
   padding-bottom: .5rem;
 }
 .card .foot {
+  position: relative;
   display: flex;
+  border-top: solid 1px rgba(0, 0, 0, 0.1);
+}
+.card .foot .meta {
+  display: list-item;
+  font-size: 1.2rem;
+  padding: .6em;
+}
+.card .foot .right {
+  position: absolute;
+  right: 12px;
+}
+.card .foot .left {
+  position: absolute;
+  left: 12px;
 }
 .card .card-btn {
   background-color: #fff;
   color: #333;
-  border-top: solid 1px rgba(0, 0, 0, 0.1);
   border-left: solid 1px rgba(0, 0, 0, 0.1);
   padding: .6rem;
   padding-bottom: .5rem;
