--- a/css/style.css
+++ b/css/style.css
@@ -1,11 +1,11 @@
 @import 'https://fonts.googleapis.com/css?family=Viga';
 .logo {
-  font-family: 'Lobster';
   font-weight: 200;
-  font-size: 3rem;
-  letter-spacing: .6rem;
+  font-size: 2.4rem;
+  letter-spacing: .2rem;
   padding-left: 8px;
-  color: #333;
+  color: rgba(0, 0, 0, 0.8);
+  -webkit-box-reflect: below -26px -webkit-gradient(linear, 0 0, 0 100%, from(transparent), color-stop(0.4, transparent), to(rgba(0,0,0,0.8)));
 }
 
 .pmenu .brand-box {
@@ -16,25 +16,28 @@
 }
 
 .pmenu .brand-box p {
-  font-family: 'Lobster', sans-serif;
-  font-size: 2rem;
-  letter-spacing: 0.4rem;
+  font-family: 'Viga', sans-serif;
+  font-size: 1.5rem;
+  letter-spacing: 0.75rem;
   padding-left: 1.2px;
   color: #e1e1e1;
   margin: 0;
 }
 
-/* Code
-–––––––––––––––––––––––––––––––––––––––––––––––––– */
-code {
-  padding: .2rem .5rem;
-  margin: 0 .2rem;
-  font-size: 90%;
-  white-space: nowrap;
-  background: #F1F1F1;
-  border: 1px solid #E1E1E1;
-  border-radius: 4px; }
-pre > code {
-  display: block;
-  padding: 1rem 1.5rem;
-  white-space: pre; }
+.card .body {
+  background-color: #fff;
+  -webkit-transition: all 0.3s ease;
+  -moz-transition: all 0.3s ease;
+  -o-transition: all 0.3s ease;
+  transition: all  0.3s ease;
+}
+
+ .showing {
+  background-color: #333;
+  color: #fff;
+  width: 100%;
+}
+
+.hidden-code-1 {
+  word-wrap: normal;
+}
