--- a/css/style.css
+++ b/css/style.css
@@ -36,6 +36,27 @@
   margin-top: -2px;
   margin-bottom: -10px;
   padding: 12px;
-  height: 300px;
+  width: 110%;
+  height: 280px;
   font-size: 16px;
+  font-weight: 200;
+  letter-spacing: 0.04em;
+}
+
+.hidden-code:focus {
+  border: 0;
+}
+
+.top-logo img {
+  -webkit-filter: drop-shadow(0 0 10px rgba(143, 210, 200, 1));
+  width: 180px;
+  -webkit-transition: all 6s ease-in-out;
+  -moz-transition: all 6s ease-in-out;
+  -o-transition: all 6s ease-in-out;
+  transition: all  6s ease-in-out;
+  cursor: pointer;
+}
+.top-logo img:active {
+  opacity: 0.5;
+  transform: rotate(3600deg);
 }
