--- a/css/qwerty.css
+++ b/css/qwerty.css
@@ -125,6 +125,7 @@
 .one-third               { width: 33.33333333333333%; }
 .two-thirds              { width: 66.66666666666666% }
 .one-half                { width: 50%; }
+.full-x                  { width: 100%; }
 
 /* Base Styles
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
@@ -233,7 +234,7 @@ a:hover {
 
 .btn:active {
   top: 3px;
-  background-color: #eee;
+  opacity: 0.65;
 }
 .btn-lg {
 font-size: 2.4rem;
@@ -272,7 +273,7 @@ padding: 1rem 2rem .8rem 2rem;
 .circle-button i {
   padding-left: 12px;
   font-size: 20px;
-  line-height: 42px;
+  line-height: 44px;
   color: #fff;
   cursor: pointer;
 }
@@ -300,6 +301,7 @@ padding: 1rem 2rem .8rem 2rem;
   border-bottom: solid 1px rgba(55, 55, 55, 0.2);
   border-right: solid 1px rgba(55, 55, 55, 0.2);
   border-radius: 5px;
+  overflow: scroll;
 }
 
 /* Forms
@@ -368,6 +370,7 @@ form {
     padding: .8rem;
     margin-bottom: 0;
 }
+
 .qwertize input[type=radio],
 .qwertize input[type=checkbox] {
     display: inline-block;
@@ -376,13 +379,10 @@ form {
 .qwertize input[type=radio] + label,
 .qwertize input[type=checkbox] + label {
     position: relative;
-
     display: inline-block;
     margin-right: 12px;
-
     font-size: 14px;
     line-height: 30px;
-
     cursor: pointer;
 }
 
@@ -402,14 +402,12 @@ form {
         position: absolute;
         top: 50%;
         left: 0;
-
         -moz-box-sizing: border-box;
         box-sizing: border-box;
         display: block;
         width: 18px;
         height: 18px;
         margin-top: -9px;
-
         background: #FFF;
     }
     .qwertize input[type=radio] + label::before {
@@ -1096,9 +1094,11 @@ nav ul{
     margin: 0;
     background-color: #555;
   }
-
   .default-nav ul a {
     color: #fff
+  }
+  .menu-header .header-right .qwertize {
+    display: none;
   }
 }
 
@@ -1155,8 +1155,10 @@ nav ul{
 .card .image-head .title {
   position: absolute;
   padding: 8px;
+  margin: 0;
   bottom: 0px;
   color: #fff;
+  line-height: 1.2;
 }
 .card .body {
   border-top: solid 1px rgba(0, 0, 0, 0.1);
@@ -1178,6 +1180,13 @@ nav ul{
   position: absolute;
   right: 12px;
 }
+.card .foot .center {
+  position: absolute;
+  left: 50%;
+  -webkit-transform: translateX(-50%);
+  -moz-transform: translateX(-50%);
+  transform: translateX(-50%;)
+}
 .card .foot .left {
   position: absolute;
   left: 12px;
@@ -1193,6 +1202,7 @@ nav ul{
   display: inline-block;
   position: relative;
   white-space: nowrap;
+  text-align: center;
 }
 .card .card-btn:first-child {
   border-left: solid 0px rgba(0, 0, 0, 0.1);
