--- a/css/qwerty.css
+++ b/css/qwerty.css
@@ -125,6 +125,7 @@
 .one-third               { width: 33.33333333333333%; }
 .two-thirds              { width: 66.66666666666666% }
 .one-half                { width: 50%; }
+.full-x                  { width: 100%; }
 
 /* Base Styles
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
@@ -233,7 +234,7 @@ a:hover {
 
 .btn:active {
   top: 3px;
-  background-color: #eee;
+  opacity: 0.65;
 }
 .btn-lg {
 font-size: 2.4rem;
@@ -272,7 +273,7 @@ padding: 1rem 2rem .8rem 2rem;
 .circle-button i {
   padding-left: 12px;
   font-size: 20px;
-  line-height: 42px;
+  line-height: 44px;
   color: #fff;
   cursor: pointer;
 }
@@ -300,6 +301,7 @@ padding: 1rem 2rem .8rem 2rem;
   border-bottom: solid 1px rgba(55, 55, 55, 0.2);
   border-right: solid 1px rgba(55, 55, 55, 0.2);
   border-radius: 5px;
+  overflow: scroll;
 }
 
 /* Forms
@@ -368,6 +370,7 @@ form {
     padding: .8rem;
     margin-bottom: 0;
 }
+
 .qwertize input[type=radio],
 .qwertize input[type=checkbox] {
     display: inline-block;
@@ -376,13 +379,10 @@ form {
 .qwertize input[type=radio] + label,
 .qwertize input[type=checkbox] + label {
     position: relative;
-
     display: inline-block;
     margin-right: 12px;
-
     font-size: 14px;
     line-height: 30px;
-
     cursor: pointer;
 }
 
@@ -402,14 +402,12 @@ form {
         position: absolute;
         top: 50%;
         left: 0;
-
         -moz-box-sizing: border-box;
         box-sizing: border-box;
         display: block;
         width: 18px;
         height: 18px;
         margin-top: -9px;
-
         background: #FFF;
     }
     .qwertize input[type=radio] + label::before {
@@ -424,35 +422,95 @@ form {
         content: "";
         position: absolute;
         top: 50%;
-
         -moz-box-sizing: border-box;
         box-sizing: border-box;
         display: block;
     }
     .qwertize input[type=radio]:checked + label::after {
         left: 5px;
-
         width: 8px;
         height: 8px;
         margin-top: -4px;
-
         background: #EB7413;
         border-radius: 8px;
     }
     .qwertize input[type=checkbox]:checked + label::after {
         left: 3px;
-
         width: 16px;
         height: 8px;
         margin-top: -8px;
-
         border-left: 3px solid #EB7413;
         border-bottom: 3px solid #EB7413;
-
         -webkit-transform: rotate(-45deg);
         -ms-transform: rotate(-45deg);
         transform: rotate(-45deg);
     }
+
+    /* switch */
+    .qwertize .switch {
+        position: relative;
+        display: block;
+        margin: auto;
+        margin-bottom: .5em;
+        height: 26px;
+        overflow: hidden;
+        border: 2px solid #ccc;
+    }
+    .qwertize .switch input[type=radio] + label {
+        position: static;
+        float: left;
+        display: block;
+        width: 50%;
+        margin-right: 0;
+        padding: 0;
+        overflow: hidden;
+        text-align: center;
+        font-size: 12px;
+    }
+    .qwertize .switch input[type=radio] + label::before {
+        content: attr(data-label);
+        top: 0;
+        bottom: 0;
+        z-index: 1;
+        display: block;
+        width: 50%;
+        height: auto;
+        margin-top: 0;
+        text-align: center;
+        color: transparent;
+        background: transparent;
+        border: 0 none;
+        border-radius: 0;
+    }
+    .qwertize .switch input[type=radio] + label:last-child::before {left: 50%;right: 0;}
+    .qwertize .switch input[type=radio]:checked + label::before {color: #fff;}
+    .qwertize .switch input[type=radio] + label::after {border-radius: 0;}
+    .qwertize .switch input[type=radio]:first-child + label::after {content: none;}
+    .qwertize .switch input[type=radio] + label + input[type=radio] + label::after {
+        content: "";
+        position: absolute;
+        top: 0;
+        bottom: 0;
+        z-index: 0;
+        display: block;
+        width: auto;
+        height: auto;
+        margin: auto;
+        background: #EB7413;
+        border: 2px solid #fff;
+        -webkit-transition: all 200ms;
+        transition: all 200ms;
+    }
+
+    .qwertize .switch input[type=radio]:checked + label + input[type=radio] + label::after {
+        left: 0;
+        right: 50%;
+    }
+    .qwertize .switch input[type=radio] + label + input[type=radio]:checked + label::after {
+        left: 50%;
+        right: 0;
+    }
+
 }
 
 
@@ -1036,9 +1094,11 @@ nav ul{
     margin: 0;
     background-color: #555;
   }
-
   .default-nav ul a {
     color: #fff
+  }
+  .menu-header .header-right .qwertize {
+    display: none;
   }
 }
 
@@ -1095,8 +1155,10 @@ nav ul{
 .card .image-head .title {
   position: absolute;
   padding: 8px;
+  margin: 0;
   bottom: 0px;
   color: #fff;
+  line-height: 1.2;
 }
 .card .body {
   border-top: solid 1px rgba(0, 0, 0, 0.1);
@@ -1118,6 +1180,13 @@ nav ul{
   position: absolute;
   right: 12px;
 }
+.card .foot .center {
+  position: absolute;
+  left: 50%;
+  -webkit-transform: translateX(-50%);
+  -moz-transform: translateX(-50%);
+  transform: translateX(-50%;)
+}
 .card .foot .left {
   position: absolute;
   left: 12px;
@@ -1133,6 +1202,7 @@ nav ul{
   display: inline-block;
   position: relative;
   white-space: nowrap;
+  text-align: center;
 }
 .card .card-btn:first-child {
   border-left: solid 0px rgba(0, 0, 0, 0.1);
