--- a/css/qwerty.css
+++ b/css/qwerty.css
@@ -125,7 +125,7 @@
 .one-third               { width: 33.33333333333333%; }
 .two-thirds              { width: 66.66666666666666% }
 .one-half                { width: 50%; }
-.full-x                  { width: 100%; }
+.full-x                  { width: 100% !important; }
 
 /* Base Styles
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
