--- a/css/qwerty.css
+++ b/css/qwerty.css
@@ -1226,8 +1226,11 @@ nav ul{
 }
 .card .card-menu li {
   list-style: none;
-  margin: none;
+  margin: 0;
   padding: 4px 8px;
+}
+.card .card-menu li:hover {
+  background-color: rgba(0, 0, 0, 0.05);
 }
 
 /* Accennt */
