--- a/css/qwerty.css
+++ b/css/qwerty.css
@@ -1227,6 +1227,7 @@ nav ul{
 .card .card-menu li {
   list-style: none;
   margin: 0;
+  padding: 4px;
 }
 .card .card-menu li:hover {
   background-color: rgba(0, 0, 0, 0.05);
