--- a/css/qwerty.css
+++ b/css/qwerty.css
@@ -1221,7 +1221,7 @@ nav ul{
   padding: 0;
 }
 .card .card-menu div {
-  padding: 4px;
+  padding: 5px 10px;
 }
 .card .card-menu ul {
   list-style: none;
