--- a/css/qwerty.css
+++ b/css/qwerty.css
@@ -1217,6 +1217,11 @@ nav ul{
 .card input {
 
 }
+
+.card .summary img {
+  width: 50%;
+}
+
 .card .card-menu {
   padding: 0;
 }
@@ -1230,7 +1235,7 @@ nav ul{
 .card .card-menu li {
   list-style: none;
   margin: 0;
-  padding: 5px 10px;
+  padding: 5px 15px;
   cursor: pointer;
 }
 .card .card-menu li:hover {
