--- a/css/qwerty.css
+++ b/css/qwerty.css
@@ -289,6 +289,7 @@ padding: 1rem 2rem .8rem 2rem;
   right: 4px;
   margin-top: 4px;
 }
+
 .qw-box {
   background-color: #fff;
   border-top: solid 1px rgba(200, 200, 200, 0.4);
@@ -296,9 +297,13 @@ padding: 1rem 2rem .8rem 2rem;
   border-bottom: solid 1px rgba(55, 55, 55, 0.2);
   border-right: solid 1px rgba(55, 55, 55, 0.2);
   border-radius: 5px;
-  overflow: scroll;
 }
 
+@media (max-width: 800px) {
+  .qw-box {
+    overflow: scroll;
+  }
+}
 /* Forms
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
 input[type="email"],
